# atsam4-hal

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
boards/sam4e_xplained_pro/blink/: Cargo.toml  debugscript.gdb  memory.x
boards/sam4e_xplained_pro/blink/.cargo/: config
boards/sam4e_xplained_pro/blink/src/: main.rs
ci/: script.sh
docs/: readme.md
src/: adc.rs  chipid.rs  clock.rs  delay.rs  efc.rs  gpio.rs  lib.rs  pdc.rs  prelude.rs  rtt.rs  serial.rs  spi.rs  static_memory_controller.rs  time.rs  timer.rs  twi.rs  watchdog.rs
src/common/: delay.rs  mod.rs
src/ethernet/: builder.rs  controller.rs  descriptor_block.rs  descriptor_table.rs  mod.rs  phy.rs  receiver.rs  rx.rs  smoltcp.rs  smoltcp_support.rs  transmitter.rs  tx.rs  volatile_read_write.rs
src/ethernet/phy/: anar.rs  bmcr.rs  bmsr.rs  mod.rs  pcr1.rs
src/ethernet/rx/: descriptor.rs  descriptor_block.rs  descriptor_table.rs  mod.rs  receiver.rs
src/ethernet/tx/: descriptor.rs  descriptor_block.rs  descriptor_table.rs  mod.rs  transmitter.rs
src/ethernet_controller/: eui48.rs  mod.rs  rxbufdescblock.rs  txbufdescblock.rs
src/ethernet_controller/mii/: bmcr.rs  mod.rs
src/gpio/: atsam4.rs  mod.rs
src/rtt/: atsam4.rs  mod.rs
src/sam4e/: clock.rs  gpio.rs  mod.rs  static_memory_controller.rs
src/sam4e16e/: mod.rs
src/serial/: atsam4.rs
src/udp/: bus.rs  endpoint.rs  mod.rs
src/watchdog/: mod.rs
svd/: ATSAM4E16E.svd
