[package]
name = "atsam4-hal"
version = "0.1.0"
authors = ["John W. Terrell <john@coolpeoplenetworks.com>"]
edition = "2018"
description = "HAL for the ATSAM4 microcontrollers"
keywords = ["arm", "cortex-m", "atsam4", "atsam4s", "atsam4sd32c", "atsam4e", "atsam4e16e", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsam4-rs/atsam4-hal"

[dependencies]
paste = "1.0"

[dependencies.cast]
version = "0.2.2"
default-features = false

[dependencies.cortex-m]
version = "0.6.3"

[dependencies.embedded-hal]
version = "0.2.4"
features = ["unproven"]

[dependencies.nb]
version = "0.1.0"

[dependencies.atsam4e16e-pac]
version = "0.1.2"
path = "../atsam4e16e-pac"
optional = true

[dependencies.atsam4sd32c-pac]
version = "0.1.1"
path = "../atsam4sd32c-pac"
optional = true

[dependencies.void]
version = "1.0.2"
default-features = false

[features]
default = ["atsam4e16e"]
atsam4e = []
atsam4e16e = ["atsam4e", "atsam4e16e-pac", "atsam4e16e-pac/rt"]
atsam4s = []
atsam4sd32c = ["atsam4s", "atsam4sd32c-pac", "atsam4sd32c-pac/rt"]
