[package]
name = "atsam4-hal"
version = "0.1.6"
authors = ["John W. Terrell <john@coolpeoplenetworks.com>"]
edition = "2018"
description = "HAL for the ATSAM4 microcontrollers"
keywords = ["arm", "cortex-m", "atsam4", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsam4-rs/atsam4-hal"

[dependencies]
paste = "1.0"

[dependencies.cast]
version = "0.2.2"
default-features = false

[dependencies.cortex-m]
version = "0.7.2"

[dependencies.embedded-hal]
version = "0.2.4"
features = ["unproven"]

[dependencies.cortex-m-rt]
version = "0.6.13"

[dependencies.nb]
version = "0.1.0"

[dependencies.atsam4e8c-pac]
version = "0.1.6"
optional = true

[dependencies.atsam4e8e-pac]
version = "0.1.6"
optional = true

[dependencies.atsam4e16c-pac]
version = "0.1.6"
optional = true

[dependencies.atsam4e16e-pac]
version = "0.1.6"
optional = true

[dependencies.atsam4s4b-pac]
version = "0.1.1"
optional = true

[dependencies.atsam4s8b-pac]
version = "0.1.1"
optional = true

[dependencies.atsam4sd32c-pac]
version = "0.1.1"
optional = true

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.volatile]
version = "0.4.1"

[features]
default = ["atsam4e16e"]
unstable = []

# Enable USB clock support
usb = []

# atsam4e
atsam4e = []
atsam4e8c = ["atsam4e", "atsam4e8c-pac", "atsam4e8c-pac/rt"]
atsam4e8e = ["atsam4e", "atsam4e8e-pac", "atsam4e8e-pac/rt"]
atsam4e16c = ["atsam4e", "atsam4e16c-pac", "atsam4e16c-pac/rt"]
atsam4e16e = ["atsam4e", "atsam4e16e-pac", "atsam4e16e-pac/rt"]

# atsam4s
atsam4s = []
atsam4s_a = [] # 48-pin
atsam4s_b = [] # 64-pin
atsam4s_c = [] # 100-pin
atsam4sd = [] # Dual bank flash

atsam4s4b = ["atsam4s", "atsam4s_b", "atsam4s4b-pac", "atsam4s4b-pac/rt"]
atsam4s8b = ["atsam4s", "atsam4s_b", "atsam4s8b-pac", "atsam4s8b-pac/rt"]
atsam4sd32c = ["atsam4s", "atsam4sd", "atsam4s_c", "atsam4sd32c-pac", "atsam4sd32c-pac/rt"]
