[package]
name = "sam4e_xplained_pro_blink"
version = "0.1.0"
authors = ["John Terrell <john@coolpeoplenetworks.com>"]
description = "Example LED blink for SAM4E_XPLAINED_PRO"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
cortex-m = "~0.6"
embedded-hal = "~0.2.3"
nb = "~0.1"
cortex-m-semihosting = "~0.3"

[dependencies.cortex-m-rt]
version = "~0.6.12"
optional = true

[dependencies.panic-abort]
version = "~0.3"
optional = true

[dependencies.panic-halt]
version = "~0.2"
optional = true

[dependencies.panic-semihosting]
version = "~0.5"
optional = true
features = ["jlink-quirks"]

[dependencies.atsam4-hal]
path = "../../.."

[features]
default = ["rt", "atsam4-hal/atsam4e16e", "panic_semihosting"]
rt = ["cortex-m-rt"]
panic_halt = ["panic-halt"]
panic_abort = ["panic-abort"]
panic_semihosting = ["panic-semihosting"]
use_semihosting = []
